# minimization

./: README.md  pyproject.toml
minimization/: algorithms.py  dfa.py  dsu.py
tests/: test_equivalence.py  test_minimize.py  test_table_filling.py
